Fixed the gap on the whats on title

--- a/styles/custom.less
+++ b/styles/custom.less
@@ -100,7 +100,11 @@ FRONT PAGE CUSTOM STYLES
     color:#fff !important;
 }
 
-.whats-on-title h1 { font-size:5em !important; margin-top:.7em;}
+.whats-on-title h1 {
+    font-size:5em !important;
+    margin-top: 70px;
+    margin-bottom: 60px;
+}
 
 #yui_3_17_2_2_1435150511307_489.summary-item {
     background: #000 !important;
@@ -118,7 +122,7 @@ div#block-yui_3_17_2_2_1435111617305_10207 > .sqs-block-content h1, div#block-yu
 
 .whats-on {
     min-height: 500px !important;
-    padding-top:3em !important;
+    padding-top:0 !important;
     padding-bottom:5em !important;
     background: #0200fc !important;
 }
